--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Introduction Section -->
         <section>
           <!-- reference image here -->
-          <img src ="Portfolio/images/GenniferS-Photo.png" alt= "Gennifer Sabye - Profile Photo">
+          <img src ="GenniferS-Photo.png" alt= "Gennifer Sabye - Profile Photo">
           
           <h1> Introduction </h1>
            <p> I'm a student at Thinkful learning to be a Software Developer living in Mesa, Arizona. </p>
