--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <h2> Contact Me </h2>
             <p> If you're interested in knowing more about me, please feel free to connect with me here: </p>
             <ol>
-              <li> Linked in : href="https://www.linkedin.com/in/gennifer-sabye/" target="_blank">LinkedIn"</li>
-              <li> GitHub : href="https://github.com/GenniferS" target="_blank">GitHub"</li>
+              <li> Linked in : href="https://www.linkedin.com/in/gennifer-sabye/"</li>
+              <li> GitHub : href="https://github.com/GenniferS"</li>
           </ol>
         </section>
         
