--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <h2> Contact Me </h2>
             <p> If you're interested in knowing more about me, please feel free to connect with me here: </p>
             <ol>
-              <li> Linked in : href="https://www.linkedin.com/in/gennifer-sabye/"</li>
-              <li> GitHub : href="https://github.com/GenniferS"</li>
+              <li> LinkedIn : <a href="https://www.linkedin.com/in/gennifer-sabye/"</a> </li>
+              <li> GitHub : <a href="https://github.com/GenniferS" </a> </li>
           </ol>
         </section>
         
