--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     
     <header>
-      <div> Gennifer Sabye </div>
+      <div class="header"> Gennifer Sabye </div>
         <h2> Software Developer </h2>
     </header>
       
