--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     
     <header>
-      <div class="box round"> Gennifer Sabye </div>
+      <div class="box round"> <p>Gennifer Sabye </p></div>
         <h2> Software Developer </h2>
     </header>
       
