--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     
     <header>
-      <div>Gennifer Sabye</div>
+      <h1> Gennifer Sabye </h1>
         <h2> Software Developer </h2>
     </header>
       
