--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     
     <header>
-      <h1> Gennifer Sabye </h1>
+      <div class="box round">Gennifer Sabye </div>
         <h2> Software Developer </h2>
     </header>
       
