--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <header>
       <div class="box round">Gennifer Sabye </div>
-        <h2> Software Developer </h2>
+        <h2 class="box round"> Software Developer </h2>
     </header>
       
       <main>
