--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <p> If you're interested in knowing more about me, please feel free to connect with me here: </p>
           <!-- Numbered list of ways to contact -->
             <ol>
-              <li><a href="https://www.linkedin.com/in/gennifer-sabye/"> LinkedIn</a> </li>
-              <li><a href="https://github.com/GenniferS" > GitHub</a> </li>
+              <li><a href="https://www.linkedin.com/in/gennifer-sabye/" target="_blank"> LinkedIn</a> </li>
+              <li><a href="https://github.com/GenniferS" target="_blank" > GitHub</a> </li>
           </ol>
         </section>
         
