Updated About Me

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <!-- Details in the About Me Section -->
         <section>
           <h2> About Me </h2>
-           <p> After graduating college, I became a Middle School Math teacher in Mesa, Arizona. I loved teaching students and working with them through one of the most challenging subjects. It was always a great day when even one student said: "I get this!" </p>
-           <p> It wasn't long into my teaching career before I felt the additional pressures that all teachers will eventually face, and soon knew that I did not have the same passion as I once did. However, I knew I still had that passion for Education and the classroom. <p>
-           <p> This thought process led me to my current career of working in Customer Support, servicing school districts to ultimately make the teaching life just a little bit easier through technology. </p>
-           <p> However, after a 7-year long career, it's time for growth in my abilities and here I am as a Software Developer!! </p>
+           <p> After graduating college, I became a Middle School Math teacher in Mesa, Arizona. I loved working with students but, it wasn't long into my career before I felt the additional pressures that all teachers will eventually face. </p>
+           <p> However, I knew I still had that passion for Education and the classroom. This thought process led me to supporting a technology that serviced school districts to ultimately make the teaching life just a little bit easier. <p>
+           <p> Being a part of the tech world for 7-years has been eye-opening. I've worked alongside developers to enhance a product and solve day to day problems. This new world that I had never known of brought up some of that passion I had orginally had when I was in the classroom. </p>
+           <p> Working with code to create something new is something that keeps me engaged and ignites my brain to work harder to solve problems and make new things. Working with others to get feedback and discuss design options lets me know that I can create my best work.</p>
           
           <!-- Bulleted List of Education -->
           <h3> Education </h3>
