--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <p> After graduating college, I became a Middle School Math teacher in Mesa, Arizona. I loved working with students but, it wasn't long into my career before I felt the additional pressures that all teachers will eventually face. </p>
            <p> However, I knew I still had that passion for Education and the classroom. This thought process led me to supporting a technology that serviced school districts to ultimately make the teaching life just a little bit easier. <p>
            <p> Being a part of the tech world for 7-years has been eye-opening. I've worked alongside developers to enhance a product and solve day to day problems. This new world that I had never known of brought up some of that passion I had orginally had when I was in the classroom. </p>
-           <p> Working with code to create something new keeps me engaged and ignites my brain to work harder to solve problems and make new things. Working with others to get feedback and discuss design options lets me know that I can create my best work.</p>
+           <p> Working with code ignites my brain to work harder to solve problems and create something new. Working with others to get feedback and discuss design options lets me know that I can create my best work.</p>
           
           <!-- Bulleted List of Education -->
           <h3> Education </h3>
