--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
         <!-- Details in the About Me Section -->
         <section>
           <h2> About Me </h2>
-           <p> After graduating college, I became a Middle School Math teacher in Mesa, Arizona. I loved working with students but, it wasn't long into my career before I felt the additional pressures that all teachers will eventually face. </p>
-           <p> However, I knew I still had that passion for Education and the classroom. This thought process led me to supporting a technology that serviced school districts to ultimately make the teaching life just a little bit easier. <p>
-           <p> Being a part of the tech world for 7-years has been eye-opening. I've worked alongside developers to enhance a product and solve day to day problems. This new world that I had never known of brought up some of that passion I had orginally had when I was in the classroom. </p>
-           <p> Working with code ignites my brain to work harder to solve problems and create something new. Collaborating with others to get feedback and discuss design options lets me know that I can create my best work.</p>
+           <p> After graduating college, my passion was for teaching math and inspiring students. It was not long into my teaching career before I knew that this was not the right fit. However, I still wanted to support schools and student learning. </p>
+           <p> This thought process led me to supporting a technology that serviced school districts to ultimately make the teaching life just a little bit easier. I've worked alongside developers to enhance a product and solve day to day problems.<p>
+           <p> Being involved in this new world that I had never known of brought up some of that passion I had orginally when I was in the classroom. Working with code ignites my brain to work harder to solve problems and create something new. Collaborating with others to get feedback and discuss design options lets me know that I can create my best work.</p>
           
           <!-- Bulleted List of Education -->
           <h3> Education </h3>
