Cleaned up Education
Dashes instead of commas for readability

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <!-- Bulleted List of Education -->
           <h3> Education </h3>
            <ul> 
-             <li> Thinkful, Software Developer, 2022 </li>
-             <li> Arizona State University, MA Curriculum and Instruction Accomplished Teaching, 2012 </li>
-             <li> Arizona State University, BAE Secondary Education - Mathematics, 2011 </li>
+             <li> Thinkful - Software Developer - 2022 </li>
+             <li> Arizona State University - MA Curriculum and Instruction Accomplished Teaching - 2012 </li>
+             <li> Arizona State University - BAE Secondary Education - Mathematics - 2011 </li>
            </ul>
         </section>
         
